[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotenvmodel"
version = "0.3.2"
description = "Type-safe environment configuration with automatic .env file loading"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "AZX, PBC.", email = "oss@azx.io" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.16.0",
]
license = { text = "MIT" }
keywords = ["environment", "config", "dotenv", "settings", "configuration", "env"]

[project.urls]
Homepage = "https://github.com/AZX-PBC-OSS/dotenvmodel"
Repository = "https://github.com/AZX-PBC-OSS/dotenvmodel"
Issues = "https://github.com/AZX-PBC-OSS/dotenvmodel/issues"
Changelog = "https://github.com/AZX-PBC-OSS/dotenvmodel/blob/main/CHANGELOG.md"

[tool.uv]
package = true
exclude-newer = "48h"
constraint-dependencies = ["pygments>=2.20.0"]

[tool.hatch.build.targets.wheel]
packages = ["dotenvmodel"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.7",
    "mkdocstrings[python]>=1.0.6",
    "pip-audit>=2.10.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "N802",   # Field function name is intentionally capitalized (Pydantic-style API)
    "N818",   # MultipleValidationErrors is acceptable naming
    "E501",   # Line length handled by formatter
]

[tool.ty]
# ty will use the project's Python version for type checking
# See: https://docs.astral.sh/ty/configuration/

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=dotenvmodel",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
]

[tool.coverage.run]
source = ["dotenvmodel"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
